--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ if(v>=.6)clearInterval(f)
 <div class="end" id="end">
 <h1>I LOVE YOU ❤️</h1>
 <button class="btn" onclick="location.reload()">Restart</button>
-<a class="btn" href="contact.html">Contact Us</a>
+<button class="btn" onclick="location.href='contact.html'">Contact Us</button>
 </div>
 
 <script>
@@ -402,4 +402,5 @@ slides[idx].classList.add("active")
 }
 </script>
 </body>
+
 </html>
